src/compiler/example/error/github/raw.githubusercontent.com/wcpro/Scaffeine/89f58fd51097a098c1dacce13400df5091de006f/src/Scaffeine.Shell/content/Views/Home/Learn.cshtml.pp
@{
    ViewBag.Title = "Learn";
}
@section container
{
    <div class="page-header">
        <h1>
            Learn More
        </h1>
    </div>
}
